test/tests/stages/18_structures/invalid_parse/struct_member_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[10]:
  struct
  identifier(a)
  {
  int
  identifier(member)
  =
  const int(1)
  ;
  }
  ;
